feat: Support batch caching operation